# python-billiards

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Notes.md  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  create_images.py  create_visualizations.py  examples.rst  index.rst  installation.rst  make.bat  quickstart.rst  usage.rst
docs/api_reference/: billiards.rst  billiards_obstacles.rst  billiards_physics.rst  billiards_simulation.rst  billiards_visualize.rst  billiards_visualize_matplotlib.rst  billiards_visualize_pyglet.rst  modules.rst
examples/: collapse.py  collapse_pyglet.py  eight-ball.py  ideal_gas.py  maze.py  newtons_cradle.py  pi_with_pool.py  pool.py  pool_first_shot.py  sinai_billiard.py
src/billiards/: __init__.py  obstacles.py  physics.py  simulation.py  visualization.py  visualize.py  visualize_matplotlib.py  visualize_pyglet.py
tests/: conftest.py  test_obstacles.py  test_physics.py  test_simulation.py  test_visualization.py  test_visualize.py  test_visualize_matplotlib.py  test_visualize_pyglet.py
