[metadata]
name = billiards
version = 0.5.0
license = GNU General Public License v3 or later (GPLv3+)
license_file = LICENSE
description = A 2D physics engine for simulating dynamical billiards
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = python3, physics-engine, physics-2d
author = Markus Ebke
author_email = markus.ebke92@gmail.com
url = https://github.com/markus-ebke/python-billiards
project_urls =
    Source Code = https://github.com/markus-ebke/python-billiards
    Bug Reports = https://github.com/markus-ebke/python-billiards/issues
platforms =
    any
classifiers =
    # complete classifier list: https://pypi.org/classifiers/
    # status
    Development Status :: 3 - Alpha

    # who this project is for
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research

    # lawyer stuff
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

    # operating system
    Operating System :: OS Independent

    # natural language
    Natural Language :: English

    # programming language
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

    # topic
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
setup_requires =
    pytest-runner
tests_require =
    pytest

[options.packages.find]
where = src
exclude =
    docs

[options.extras_require]
visualize =
    matplotlib
    tqdm
    pyglet

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[test]
extras = 1
